# auto-delegate

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: main.yml
auto-delegate-macros/: Cargo.toml
auto-delegate-macros/src/: attribute.rs  delegate_struct.rs  delegate_trait.rs  derive_delegate.rs  ident.rs  lib.rs  macro_marker.rs  syn_type.rs  trait_item.rs
auto-delegate-macros/src/delegate_struct/: by_fields.rs
auto-delegate-macros/src/derive_delegate/: by_fields.rs  derive_enum.rs  derive_struct.rs
auto-delegate-macros/src/syn/: syn_generics.rs
auto-delegate-macros/src/trait_item/: trait_fn_inputs.rs  trait_fn_meta.rs
benches/: benchmark.rs  cmp_handwritten_enum.rs  cmp_handwritten_struct.rs  utils.rs
define/: Cargo.toml
define/src/: lib.rs
examples/enums/: one_trait.rs  super_trait.rs
examples/structs/: async_trait.rs  multiple_traits_and_fields.rs  new_type.rs  super_trait.rs
impl/: Cargo.toml  LICENSE-MIT
impl/src/: async_trait.rs  attribute.rs  delegatable.rs  delegate_trait.rs  derive.rs  ident.rs  lib.rs  macro_marker.rs  syn.rs  trait_item.rs  trait_meta.rs
impl/src/derive/: by_fields.rs  enum.rs  struct.rs
impl/src/derive_delegate/: derive_enum.rs  derive_struct.rs
impl/src/syn/: syn_generics.rs  syn_type.rs
impl/src/trait_item/: fn_meta.rs  functions.rs  trait_fn_inputs.rs  trait_fn_iter.rs  trait_fn_meta.rs
impl/src/trait_meta/: fn_meta.rs  functions.rs
macros/: Cargo.toml  LICENSE-MIT
macros/src/: attribute.rs  delegate.rs  delegate_struct.rs  delegate_trait.rs  ident.rs  lib.rs  macro_marker.rs  span.rs  syn.rs  trait_fn_inputs.rs  trait_fn_iter.rs  trait_fn_meta.rs
macros/src/delegate_struct/: by_fields.rs  derive_dyn.rs
macros/src/derive_delegate/: derive_enum.rs
macros/src/syn/: syn_generics.rs  syn_type.rs
macros/src/trait_item/: trait_fn_inputs.rs  trait_fn_iter.rs  trait_fn_meta.rs
src/: child.rs  lib.rs  parent.rs  transform.rs
tests/: 01-generate_impl_macro_empty_trait.rs  01-impl_empty_trait.rs  01_generate_impl_macro_empty_trait.rs  02-derive_struct_empty.rs  02-generate_impl_macro_with_method.rs  02_delegate_by_nothing_args.rs  03-generate_impl_macro_with_input.rs  03_delegate_by_with_args.rs  04-delegate_multiple_methods.rs  04-impl_method_with_input.rs  04_delegate_multiple_methods.rs  05-delegate_multiple_traits.rs  05-impl_by_delegate.rs  05_delegate_multiple_traits.rs  06_delegate_multiple_fields.rs  07_output_tuple.rs  08_output_ref.rs  09_with_lifetime.rs  final.rs  progress.rs  test01_delegate.rs  test01_nested_modules.rs  test02_nested_modules.rs  test03_delegate_with_args.rs  test03_super_trait_hand_written.rs  test04_self_receiver.rs  test04_tuple.rs  test05_reference.rs  test05_static_method.rs  test06_lifetime.rs  test07_multiple_lifetimes.rs  test08_generics.rs  test09_multiple_generics.rs  test10_type_slice.rs  test11_generics_bound.rs  test12_generics_where.rs  test13_multiple_delegate_traits.rs  test14_multiple_fields.rs  test14_new_type.rs  test15_enum.rs  (+25 more)
tests/args/: progress.rs  test01_method_with_args.rs  test02_tuple.rs  test03_reference.rs  test04_slice.rs
tests/associated_type/: progress.rs  test01_associated_type.rs  test02_associated_types_with_generics.rs  test03_associated_types_with_lifetimes.rs
tests/async_trait/: progress.rs  test01_async_trait.rs  test02_async_trait_attribute_full_path.rs  test03_async_trait_attribute_short_path.rs  test04_async_trait_with_fn_lifetime.rs  test05_immutable_self_receiver.rs
tests/common/: mod.rs
tests/common/addr/: child.rs  mod.rs  parent.rs
tests/common/async_trait/: child.rs  email_readable.rs  mod.rs
tests/common/increment/: child.rs  mod.rs  parent.rs
tests/common/multiple_field/: child.rs  mod.rs  parent.rs
tests/enum/: progress.rs  test02_multiple_traits.rs  test03_super_trait.rs  test04_generic.rs
tests/generics/: progress.rs  test04_generics_where.rs  test06_with_fn_generics.rs  test07_child_type_is_generics.rs
tests/lifetime/: progress.rs  test02_multiple_lifetimes.rs
tests/struct/: progress.rs  test01_delegate.rs  test02_multiple_fields.rs  test03_new_type.rs  test04_unnamed_fields.rs
tests/sub_module/: mod.rs
tests/sub_module/addr/: child.rs  mod.rs  parent.rs
tests/sub_module/async_trait/: child.rs  email_readable.rs  mod.rs
tests/sub_module/increment/: child.rs  mod.rs  parent.rs
tests/sub_module/multiple_field/: child.rs  mod.rs  parent.rs
