[package]
name = "auto-delegate"
authors = ["elm-register <elmregister@gmail.com>"]
version = "0.0.5"
edition = "2021"
readme = "README.md"
repository = "https://github.com/elm-register/auto-delegate"
keywords = ["delegate", "trait", "macros"]
description = "Auto delegate allows you that automatic impl of traits and delegate their handling to child members."
license-file = "LICENSE"
categories = ["no-std"]


[workspace]
members = [
    "macros"
]


[[example]]
name = "multiple_traits_and_fields"
path = "./examples/structs/multiple_traits_and_fields.rs"


[[example]]
name = "new_type"
path = "./examples/structs/new_type.rs"


[[example]]
name = "super_trait"
path = "./examples/structs/super_trait.rs"


[[example]]
name = "aync_trait"
path = "./examples/structs/async_trait.rs"


[[example]]
name = "enum_one_trait"
path = "./examples/enums/one_trait.rs"


[[example]]
name = "enum_super_trait"
path = "./examples/enums/super_trait.rs"


[[bench]]
name = "cmp_handwritten_struct"
path = "benches/cmp_handwritten_struct.rs"
harness = false


[[bench]]
name = "cmp_handwritten_enum"
path = "benches/cmp_handwritten_enum.rs"
harness = false


[[test]]
name = "tests"
path = "tests/progress.rs"


[dependencies]
auto-delegate-macros = { path = "./macros" }


[dev-dependencies]
trybuild = "1.0.80"
criterion = { version = "0.4.0", features = ["html_reports"] }
async-trait = "0.1.68"
tokio = { version = "1.28.0", features = ["full"] }