[package]
name = "auto-delegate"
authors = ["elm-register <elmprograminfo@gmail.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/elm-register/auto-delegate"
keywords = ["delegate", "trait", "macros"]
license = "MIT OR Apache-2.0"
categories = ["no-std"]
documentation = "https://docs.rs/auto-delegate/"
description = "Auto delegate allows you that automatic impl of traits and delegate their handling to child members."


[workspace]
members = [
    "impl"
]


[[example]]
name = "multiple_traits_and_fields"
path = "./examples/structs/multiple_traits_and_fields.rs"


[[example]]
name = "new_type"
path = "./examples/structs/new_type.rs"


[[example]]
name = "super_trait"
path = "./examples/structs/super_trait.rs"


[[example]]
name = "aync_trait"
path = "./examples/structs/async_trait.rs"


[[example]]
name = "enum_one_trait"
path = "./examples/enums/one_trait.rs"


[[example]]
name = "enum_super_trait"
path = "./examples/enums/super_trait.rs"


[[bench]]
name = "cmp_handwritten_struct"
path = "benches/cmp_handwritten_struct.rs"
harness = false


[[bench]]
name = "cmp_handwritten_enum"
path = "benches/cmp_handwritten_enum.rs"
harness = false


[[test]]
name = "general"
path = "tests/progress.rs"

[[test]]
name = "args"
path = "tests/args/progress.rs"

[[test]]
name = "enum"
path = "tests/enum/progress.rs"

[[test]]
name = "lifetime"
path = "tests/lifetime/progress.rs"

[[test]]
name = "struct"
path = "tests/struct/progress.rs"

[[test]]
name = "generics"
path = "tests/generics/progress.rs"

[[test]]
name = "async_trait"
path = "tests/async_trait/progress.rs"


[dependencies]
auto-delegate-impl = { version = "0.1.0", path = "impl" }


[dev-dependencies]
trybuild = "1.0.80"
criterion = { version = "0.5.1", features = ["html_reports"] }
async-trait = "0.1.68"
tokio = { version = "1.28.0", features = ["full"] }