[package]
name = "auto-delegate-macros"
version = "0.0.1"
edition = "2021"
authors = ["elm-register"]
edition = "2021"
repository = "https://github.com/elm-register/auto-delegate"
keywords = ["delegate", "trait", "macros"]
description = "Auto delegate allows you that automatic impl of traits and delegate their handling to child members."
license-file = "LICENSE"
categories = ["no-std"]


[lib]
proc-macro = true



[dependencies]
quote = "1.0.23"
proc-macro2 = "1.0.51"
syn = { version = "2.0.15", features = ["full", "extra-traits", "derive"] }


[dev-dependencies]
auto-delegate = { path = ".." }
