[package]
name = "auto-delegate-impl"
version = "0.1.0"
edition = "2021"
authors = ["elm-register <elmprograminfo@gmail.com>"]
repository = "https://github.com/elm-register/auto-delegate"
keywords = ["delegate", "trait", "macros"]
license = "MIT OR Apache-2.0"
categories = ["no-std"]
documentation = "https://docs.rs/auto-delegate/"
description = "Auto delegate allows you that automatic impl of traits and delegate their handling to child members."


[lib]
proc-macro = true


[dependencies]
quote = "1.0.23"
proc-macro2 = "1.0.51"
syn = { version = "2.0.15", features = ["full", "extra-traits", "derive", "parsing"] }


[dev-dependencies]
auto-delegate = { path = ".." }
